samples/_failures_safe/1761198276_23dd37_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1d48c6bf.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_1d48c6bf.c:124:9: error: expected declaration or statement at end of input
  124 |         if (isnan(sub_det)) {
      |         ^~
./samples/SAFE/__tmp_1d48c6bf.c:124:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1d48c6bf.c:124:9: error: expected declaration or statement at end of input
